<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray">
   <LinearLayout
       android:id="@+id/menu"
       android:layout_width="match_parent"
       style="@style/main_menu_layout">
      <LinearLayout
          android:layout_width="match_parent"
          style="@style/menu_style">
         <TextView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="@string/app_name"
             style="@style/logo_style" />
         <Button
             android:id="@+id/add_task_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_button"
             android:drawableLeft="@drawable/ic_menu_add"
             style="@style/button_menu_style"/>
         <Button
             android:id="@+id/show_hide_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hide_subtitle"
             android:drawableLeft="@drawable/hide_subtitle"
             style="@style/button_menu_style"/>

      </LinearLayout>
      <TextView
          android:id="@+id/overdue_tasks"
          android:layout_width="match_parent"
          android:text="Zaległe zadania: "
          style="@style/subtitle_menu_style" />
   </LinearLayout>

   <FrameLayout
       android:id="@+id/fragment_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@id/menu">

   </FrameLayout>

</RelativeLayout>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="ToDoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
</FrameLayout>-->
